# Ensemble-Cut

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml
.github/workflows/: release.yml  static.yml
ecut/: __init__.py  _utils.py  annealing.py  base_types.py  error_prune.py  graph_cut.py  graph_metrics.py  morphology.py  queue.py  soma_detection.py  swc_handler.py
ecut/gcut_utils/: LICENSE  distribution.py
example/: app2_processing.py  batch_1891.py
experiment/: batch_1891.py  eval.py  eval_seg_prune.py  eval_soma.py  plot.ipynb  predict_soma.py  seg_prune.py
experiment/neuron_quality/: find_break_crossing.py
test/: test_anneal.py  test_cut.py  test_prune.py  test_soma.py
test/data/: anneal_output.swc  gcut_input.swc  gcut_input.swc_sorted.swc  gcut_input.swc_sorted.swc_resampled.swc  gcut_output.swc  gcut_output_1397.swc  gcut_output_2437.swc  gcut_output_2437.swc_sorted.swc  gcut_pseudo.swc  gcut_pseudo_output.swc  gcut_pseudo_output_0.swc  gcut_pseudo_output_10.swc  pruned_tree.swc  whole_1752.swc  whole_3372.swc
